<resources>
    <string name="app_name">My Application</string>
    <string name="header_main_layout_text">CONCERTS</string>
    <string name="recommended_bar_text">RECOMMENDED</string>
    <string name="singer_name">SINGER NAME</string>
    <string name="name_concert">CONCERTS BROOKLYN</string>
    <string name="date">date \u2022 name of sing</string>
    <string name="change_location">CHANGE LOCATION</string>
    <string name="view_sing_item_header1">PLAYING FROM PLAYLIST</string>
    <string name="view_sing_item_header2">Deep Focus by Spotify</string>
    <string name="start_time_sing">0:05</string>
    <string name="end_time_sing">4:50</string>
    <string name="view_music_menu_header1">BROWSE</string>
    <string name="view_music_menu_header2">GENRES  MOODS</string>
</resources>