<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="240dp">

        <ImageView
            android:scaleType="centerCrop"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/main_pict" />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="35dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="40dp"
            android:src="@drawable/icon_menu_bar" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="41dp"
            android:text="@string/header_main_layout_text"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <TextView
            android:layout_width="190dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/name_concert"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="160dp"
            android:background="@drawable/rectangle_background"
            android:gravity="center_horizontal"
            android:text="@string/change_location"
            android:textColor="@android:color/white"
            android:textSize="13sp" />
    </FrameLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryGrey"
        android:paddingHorizontal="25dp"
        android:paddingStart="20dp"
        android:paddingLeft="20dp"
        android:paddingTop="22dp"
        android:text="@string/recommended_bar_text"
        android:textColor="@android:color/darker_gray"
        android:textSize="20sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryGrey"
            android:orientation="vertical"
            android:paddingHorizontal="25dp">

            <include layout="@layout/music_item" />

            <include layout="@layout/music_item" />

            <include layout="@layout/music_item" />

            <include layout="@layout/music_item" />

            <include layout="@layout/music_item" />

            <include layout="@layout/music_item" />

            <include layout="@layout/music_item" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>

