<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@drawable/bg_bottom_gradiend"
              android:orientation="vertical">
    <TextView android:layout_width="wrap_content"
              android:layout_height="20dp"
              android:text="@string/view_sing_item_header1"
              android:textColor="@color/colorTextGrey"
              android:layout_marginTop="10dp"
              android:layout_gravity="center_horizontal"/>

    <TextView android:layout_width="wrap_content"
              android:layout_height="20dp"
              android:text="@string/view_sing_item_header2"
              android:textColor="@color/colorTextGrey"
              android:textSize="15dp"
              android:layout_gravity="center_horizontal"/>

    <ImageView android:layout_width="300dp"
               android:layout_height="300dp"
               android:layout_gravity="center_horizontal"
               android:layout_marginVertical="10dp"
               android:src="@drawable/view_sing_item_main_pict"/>


    <LinearLayout android:layout_width="wrap_content"
                  android:layout_height="60dp"
                  android:layout_marginTop="20dp"
                  android:orientation="horizontal"
                  android:layout_gravity="center">

        <ImageView android:layout_width="30dp"
                   android:layout_height="30dp"
                   android:src="@drawable/plus"
                   android:padding="3dp"
                   android:background="@drawable/circle_background_grey"/>
        █
        <FrameLayout android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:layout_marginHorizontal="90dp">

            <TextView android:id="@+id/songName"
                      android:layout_width="wrap_content"
                      android:layout_height="25dp"
                      android:layout_gravity="center_horizontal"
                      android:text="Name of sing"
                      android:textColor="@android:color/white"
                      android:textSize="20dp"/>

            <TextView android:id="@+id/singerName"
                      android:layout_width="wrap_content"
                      android:layout_height="20dp"
                      android:text="@string/view_sing_item_header2"
                      android:layout_gravity="center_horizontal"
                      android:textColor="@color/colorTextGrey"
                      android:textSize="15dp"
                      android:layout_marginTop="30dp"/>
        </FrameLayout>

        <ImageView android:layout_width="30dp"
                   android:layout_height="30dp"
                   android:src="@drawable/ic_outline_more_vert_24"
                   android:padding="3dp"
                   android:background="@drawable/circle_background_grey"
                   android:layout_alignParentRight="true"/>
    </LinearLayout>

    <LinearLayout android:layout_width="wrap_content"
                  android:layout_height="20dp"
                  android:orientation="horizontal"
                  android:layout_gravity="center">

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/start_time_sing"
                  android:textColor="@color/colorTextGrey"/>

        <View android:layout_width="270dp"
              android:layout_height="1dp"
              android:layout_gravity="center"
              android:layout_marginHorizontal="30dp"
              android:background="@color/colorTextGrey"/>

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/end_time_sing"
                  android:textColor="@color/colorTextGrey"/>
    </LinearLayout>
    <LinearLayout android:layout_width="360dp"
                  android:layout_height="90dp"
                  android:orientation="horizontal"
                  android:layout_marginTop="80dp"
                  android:layout_gravity="center_horizontal">

        <ImageView android:layout_width="40dp"
                   android:layout_height="40dp"
                   android:layout_gravity="center"
                   android:layout_weight="1"
                   android:src="@drawable/ic_baseline_shuffle_24"/>

        <ImageView android:layout_width="40dp"
                   android:layout_height="40dp"
                   android:layout_gravity="center"
                   android:layout_weight="1"
                   android:src="@drawable/ic_baseline_skip_previous_24"/>

        <ImageView android:layout_width="90dp"
                   android:layout_height="90dp"
                   android:src="@drawable/ic_baseline_pause_24"
                   android:background="@drawable/circle_background_grey"
                   android:padding="13dp"/>

        <ImageView android:layout_width="40dp"
                   android:layout_height="40dp"
                   android:layout_gravity="center"
                   android:layout_weight="1"
                   android:src="@drawable/ic_baseline_skip_next_24"/>

        <ImageView android:layout_width="40dp"
                   android:layout_height="40dp"
                   android:layout_gravity="center"
                   android:layout_weight="1"
                   android:src="@drawable/ic_sharp_repeat_24"/>

    </LinearLayout>
</LinearLayout>




